renamed variables and ids and rounded coordinates

--- a/index.html
+++ b/index.html
@@ -13,37 +13,21 @@
 	<script type="text/javascript" src="DataTables/datatables.min.js"></script>
 </head>
 <body>
-	<div id="bldgs">
-		bldgs
-	</div>
-
-	<div id="rooms">
-		rooms
-		<table id="hmm">
+	<div id="map"></div>
+	<div id="list">
+		<table id="listbox">
 			<thead>
 				<tr>
-					<th>Building</th>
-					<th>Room Number</th>
-					<th>Times</th>
+					<th>Name</th>
+					<th>Abbreviation</th>
+					<th>Room</th>
 				</tr>
 			</thead>
 			<tbody>
-				<tr>
-					<td>Another Row</td>
-					<td>More Data</td>
-					<td>More Data</td>
-				</tr>
-				<tr>
-					<td>Another Row</td>
-					<td>More Data</td>
-					<td>More Data</td>
-				</tr>
 			</tbody>
 		</table>
 	</div>
-
-	<div id="times">
-		times
+	<div id="time">
 	</div>
 
 	<script src="index.js"></script>
