--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
 	<link rel="stylesheet" type="text/css" href="DataTables/datatables.min.css">
 	<script type="text/javascript" src="DataTables/datatables.min.js"></script>
+	<script>
+		var data = {WEBSOC_DATA};
+	</script>
 </head>
 <body>
 	<div id="map"></div>
