--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" type="text/css" href="DataTables/datatables.min.css">
 	<script type="text/javascript" src="DataTables/datatables.min.js"></script>
 	<script>
-		var data = {WEBSOC_DATA};
+		var data = [{WEBSOC_DATA}];
 	</script>
 </head>
 <body>
