take coordinates directly from map.uci.edu

--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
 
 	<link rel="stylesheet" type="text/css" href="leaflet/leaflet.css">
 	<script src="leaflet/leaflet.js"></script>
-
-	<link rel="stylesheet" type="text/css" href="DataTables/datatables.min.css">
-	<script type="text/javascript" src="DataTables/datatables.min.js"></script>
 </head>
 <body>
 	<div id="map"></div>
@@ -18,6 +15,7 @@
 
 	<script>
 		var database = {WEBSOC_DATA};
+		var geo = {MAP_DATA};
 	</script>
 	<script src="index.js"></script>
 </body>
