--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 	<link rel="stylesheet" type="text/css" href="leaflet/leaflet.css">
 	<script src="leaflet/leaflet.js"></script>
+	<script src="timetable.js"></script>
 </head>
 <body>
 	<div id="map"></div>
