--- a/test_table.html
+++ b/test_table.html
@@ -1,4 +1,3 @@
-<!doctype html>
 <head>
     <title>Test: Table</title>
     <style>
@@ -8,9 +7,9 @@
         height: 100%;
         margin: 0;
     }
-    .container {
+    .phone-simulator {
+        background: #ebdfb2;
         position: absolute;
-        background-color: #ebdfb2;
         top: 50%;
         transform: translate(-50%, -50%);
     }
@@ -24,120 +23,125 @@
         height: 400px;
         left: 67%;
     }
-    .table {
-        position: absolute;
-        background-color: black;
-        font-family: "Trebuchet MS";
-        color: white;
-        right: 0;
-        bottom: 0;
-    }
-    .vertical > .table {
+    .vertical > .container {
         left: 0;
         top: 35%;
     }
-    .horizontal > .table {
+    .horizontal > .container {
         left: 35%;
         top: 0;
     }
+    .vertical > .container > .building > .abbreviation {
+        left: 0;
+    }
+    .horizontal > .container > .building > .abbreviation {
+        left: 35%;
+    }
+
+    .container {
+        background: #000;
+        font-family: "Trebuchet MS";
+        color: white;
+        position: absolute;
+        right: 0;
+        bottom: 0;
+        overflow: scroll;
+    }
     .building {
-        margin: 2px;
+        background: #7ad;
+        width: 1200px;
     }
     .abbreviation {
-        background-color: #0064a4;
+        background: #147;
         text-align: center;
-        border-radius: 5px 5px 0 0;
-    }
-    .title {
-        /* writing-mode: tb; */
-        /* text-orientation: upright; */
-    }
-    .rooms {
-        background-color: #6aa2b8;
-        overflow-x: scroll;
-        border: solid transparent;
-        border-width: 2px 2px 0 2px;
-        border-radius: 0 0 5px 5px;
-
-    }
-    .number {
         position: fixed;
-        display: inline-block;
-        background-color: #0064a4;
-        padding: 0 2px 0 2px;
-        border-radius: 0 0 5px 5px;
-        float: left;
-    }
-
-    .room {
-        height: 21px; /* dependent */
-    }
-    .timetable {
-        display: table;
-        table-layout: fixed;
-        width: 1200px;
-        height: 15px;
+        right: 0;
     }
     .timeline {
         display: table;
         table-layout: fixed;
-        width: 1200px;
+        margin-left: 50px;
         font-size: 10px;
+        width: 1150px;
+        height: 30px;
     }
-    .timeline > .timecell {
-        border: none;
+    .number {
+        position: fixed;
+        background: #147;
+        width: 50px;
+        text-align: center;
+    }
+    .timetable {
+        height: 25px;
+    }
+    .timerow {
+        display: table;
+        table-layout: fixed;
+        margin-left: 50px;
+        width: 1150px;
+        height: 15px;
     }
     .timecell {
         display: table-cell;
-        border: solid #0064a4;
+        border: solid #147;
+        height: 10px;
     }
     .timecell:nth-child(odd) {
         border-width: 2px 0 0 1px;
-        border-radius: 0 0 0 5px;
     }
     .timecell:nth-child(even) {
         border-width: 2px 1px 0 0;
-        border-radius: 0 0 5px 0;
+    }
+    .timeline > .timecell {
+        border: none;
+        color: #147;
+        vertical-align: bottom;
     }
     </style>
 </head>
 <body>
-    <div class="container horizontal"></div>
-    <div class="container vertical">
-        <div class="table">
-            <div class="building">
-                <div class="abbreviation">
-                    <div class="title">ACT</div>
-                </div>
-                <div class="rooms">
+    <div class="phone-simulator horizontal"></div>
+    <div class="phone-simulator vertical">
+        <div class="container">
+                <div class="building">
+                    <div class="abbreviation">ACT</div>
                     <div class="timeline"></div>
+
                     <div class="number">2206</div>
-                    <div class="room">
-                        <div class="timetable"></div>
+                    <div class="timetable">
+                        <div class="timerow"></div>
                     </div>
                     <div class="number">3214</div>
-                    <div class="room">
-                        <div class="timetable"></div>
+                    <div class="timetable">
+                        <div class="timerow"></div>
                     </div>
                     <div class="number">3226</div>
-                    <div class="room">
-                        <div class="timetable"></div>
+                    <div class="timetable">
+                        <div class="timerow"></div>
                     </div>
                 </div>
-            </div>
-            <div class="building">
-                <div class="abbreviation">
-                    <div class="title">DBH</div>
-                </div>
-                <div class="rooms">
+                <div class="building">
+                    <div class="abbreviation">DBH</div>
                     <div class="timeline"></div>
                     <div class="number">5733G</div>
-                    <div class="room">
-                        <div class="timetable"></div>
+                    <div class="timetable">
+                        <div class="timerow"></div>
                     </div>
                     <div class="number">2048</div>
-                    <div class="room">
-                        <div class="timetable"></div>
+                    <div class="timetable">
+                        <div class="timerow"></div>
+                    </div>
+                </div>
+                <div class="building">
+                    <div class="abbreviation">DBH</div>
+                    <div class="timeline"></div>
+                    <div class="number">5733G</div>
+                    <div class="timetable">
+                        <div class="timerow"></div>
+                    </div>
+                    <div class="number">2048</div>
+                    <div class="timetable">
+                        <div class="timerow"></div>
                     </div>
                 </div>
             </div>
@@ -145,7 +149,6 @@
     </div>
     <script>
     var timeline = Array.from(document.getElementsByClassName("timeline"));
-    timeline.className = "timeline";
     timeline.forEach(function (e) {
         for (var c = 0; c < 24; c++) {
             var timecell = document.createElement("div");
@@ -155,8 +158,8 @@
         }
     });
 
-    var timetable = Array.from(document.getElementsByClassName("timetable"));
-    timetable.forEach(function (e) {
+    var timerow = Array.from(document.getElementsByClassName("timerow"));
+    timerow.forEach(function (e) {
         for (var c = 0; c < 48; c++) {
             var timecell = document.createElement("div");
             timecell.className = "timecell";
@@ -164,31 +167,9 @@
         }
     });
 
-    var table = document.getElementsByClassName("table")[0];
+    var container = document.getElementsByClassName("container")[0];
     var horizontal = document.getElementsByClassName("horizontal")[0];
-    var tableclone = table.cloneNode(true);
-    horizontal.appendChild(tableclone);
-
-    var rooms = Array.from(table.getElementsByClassName("rooms"));
-    rooms.forEach(function (e) {
-        e.addEventListener("scroll", function (f) {
-            rooms.forEach(function (g) {
-                if (g != f.target) {
-                    g.scrollTo(f.target.scrollLeft, f.target.scrollTop);
-                }
-            });
-        });
-    });
-
-    var roomsclone = Array.from(tableclone.getElementsByClassName("rooms"));
-    roomsclone.forEach(function (e) {
-        e.addEventListener("scroll", function (f) {
-            roomsclone.forEach(function (g) {
-                if (g != f.target) {
-                    g.scrollTo(f.target.scrollLeft, f.target.scrollTop);
-                }
-            });
-        });
-    });
+    var containerclone = container.cloneNode(true);
+    horizontal.appendChild(containerclone);
     </script>
 </body>
