--- a/gui/test_table.html
+++ b/gui/test_table.html
@@ -4,103 +4,57 @@
     <title>Test: Table</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="test_table.css">
+    <script type="application/javascript" src="test_data.js"></script>
     <script type="application/javascript" src="test_table.js"></script>
 </head>
 <body>
-    <div class="menu">
-        <div>
-            <div class="days">
-                <div class="day">Sun</div>
-                <div class="day">Mon</div>
-                <div class="day">Tue</div>
-                <div class="day">Wed</div>
-                <div class="day">Thu</div>
-                <div class="day">Fri</div>
-                <div class="day">Sat</div>
-            </div>
+    <div id="map">
+    </div>
+    <div id="legend">
+        <div id="days">
+            <div class="day">Sun</div>
+            <div class="day">Mon</div>
+            <div class="day">Tue</div>
+            <div class="day">Wed</div>
+            <div class="day">Thu</div>
+            <div class="day">Fri</div>
+            <div class="day">Sat</div>
         </div>
-        <div class="buildings">
-            <div class="abbreviation">ACT</div>
-            <div class="building">
-                <div class="timelines">
-                    <div class="timeline"></div>
+        <div id="scroller">
+            <div class="building">ACT</div>
+            <div class="timetable">
+                <div class="timeline">
+                    <div class="timeblock">12am</div>
+                    <div class="timeblock">1am</div>
+                    <div class="timeblock">2am</div>
+                    <div class="timeblock">3am</div>
+                    <div class="timeblock">4am</div>
+                    <div class="timeblock">5am</div>
+                    <div class="timeblock">6am</div>
+                    <div class="timeblock">7am</div>
+                    <div class="timeblock">8am</div>
+                    <div class="timeblock">9am</div>
+                    <div class="timeblock">10am</div>
+                    <div class="timeblock">11am</div>
+                    <div class="timeblock">12pm</div>
+                    <div class="timeblock">1pm</div>
+                    <div class="timeblock">2pm</div>
+                    <div class="timeblock">3pm</div>
+                    <div class="timeblock">4pm</div>
+                    <div class="timeblock">5pm</div>
+                    <div class="timeblock">6pm</div>
+                    <div class="timeblock">7pm</div>
+                    <div class="timeblock">8pm</div>
+                    <div class="timeblock">9pm</div>
+                    <div class="timeblock">10pm</div>
+                    <div class="timeblock">11pm</div>
                 </div>
-                <div class="rooms">
-                    <div class="room" data-number="2206">
-                        <div class="timeblocks"></div>
-                    </div>
-                    <div class="room" data-number="3214">
-                        <div class="timeblocks"></div>
-                    </div>
-                    <div class="room" data-number="3226">
-                        <div class="timeblocks"></div>
-                    </div>
-                </div>
-            </div>
-            <div class="abbreviation">DBH</div>
-            <div class="building">
-                <div class="timelines">
-                    <div class="timeline"></div>
-                </div>
-                <div class="rooms">
-                    <div class="room" data-number="5733G">
-                        <div class="timeblocks"></div>
-                    </div>
-                    <div class="room" data-number="2048">
-                        <div class="timeblocks"></div>
-                    </div>
-                </div>
-            </div>
-            <div class="abbreviation">MSTB</div>
-            <div class="building">
-                <div class="timelines">
-                    <div class="timeline"></div>
-                </div>
-                <div class="rooms">
-                    <div class="room" data-number="5733G">
-                        <div class="timeblocks"></div>
-                    </div>
-                    <div class="room" data-number="5733G">
-                        <div class="timeblocks"></div>
-                    </div>
-                    <div class="room" data-number="5733G">
-                        <div class="timeblocks"></div>
-                    </div>
-                    <div class="room" data-number="2048">
-                        <div class="timeblocks"></div>
-                    </div>
-                </div>
-            </div>
-            <div class="abbreviation">HIB</div>
-            <div class="building">
-                <div class="timelines">
-                    <div class="timeline"></div>
-                </div>
-                <div class="rooms">
-                    <div class="room" data-number="5733G">
-                        <div class="timeblocks"></div>
-                    </div>
-                    <div class="room" data-number="2048">
-                        <div class="timeblocks"></div>
-                    </div>
-                    <div class="room" data-number="5733G">
-                        <div class="timeblocks"></div>
-                    </div>
-                    <div class="room" data-number="2048">
-                        <div class="timeblocks"></div>
-                    </div>
-                    <div class="room" data-number="ONDAS">
-                        <div class="timeblocks"></div>
-                    </div>
-                    <div class="room" data-number="2048">
-                        <div class="timeblocks"></div>
-                    </div>
-                    <div class="room" data-number="5733G">
-                        <div class="timeblocks"></div>
-                    </div>
-                    <div class="room" data-number="2048">
-                        <div class="timeblocks"></div>
-                    </div>
+                <div class="schedule" data-room="2206">
+                    <div class="timebubble" style="left: 0; width: 10px;"></div>
+                    <div class="timebubble"></div>
+                    <div class="timebubble"></div>
+                    <div class="timebubble"></div>
+                    <div class="timebubble"></div>
                 </div>
             </div>
         </div>
