still reworking gui
basic js is mostly complete

--- a/gui/test_table.html
+++ b/gui/test_table.html
@@ -10,20 +10,20 @@
 <body>
     <div id="map">
     </div>
+    <div id="days">
+        <div class="day" data-day="Sun"></div>
+        <div class="day" data-day="Mon"></div>
+        <div class="day" data-day="Tue"></div>
+        <div class="day" data-day="Wed"></div>
+        <div class="day" data-day="Thu"></div>
+        <div class="day" data-day="Fri"></div>
+        <div class="day" data-day="Sat"></div>
+    </div>
     <div id="legend">
-        <div id="days">
-            <div class="day">Sun</div>
-            <div class="day">Mon</div>
-            <div class="day">Tue</div>
-            <div class="day">Wed</div>
-            <div class="day">Thu</div>
-            <div class="day">Fri</div>
-            <div class="day">Sat</div>
-        </div>
         <div id="scroller">
             <div class="building">ACT</div>
             <div class="timetable">
-                <div class="timeline">
+                <div class="timeline" data-building="ACT">
                     <div class="timeblock">12am</div>
                     <div class="timeblock">1am</div>
                     <div class="timeblock">2am</div>
