almost done with gui stuff

--- a/gui/test_table.html
+++ b/gui/test_table.html
@@ -20,44 +20,7 @@
         <div class="day" data-day="Sat"></div>
     </div>
     <div id="legend">
-        <div id="scroller">
-            <div class="building">ACT</div>
-            <div class="timetable">
-                <div class="timeline" data-building="ACT">
-                    <div class="timeblock">12am</div>
-                    <div class="timeblock">1am</div>
-                    <div class="timeblock">2am</div>
-                    <div class="timeblock">3am</div>
-                    <div class="timeblock">4am</div>
-                    <div class="timeblock">5am</div>
-                    <div class="timeblock">6am</div>
-                    <div class="timeblock">7am</div>
-                    <div class="timeblock">8am</div>
-                    <div class="timeblock">9am</div>
-                    <div class="timeblock">10am</div>
-                    <div class="timeblock">11am</div>
-                    <div class="timeblock">12pm</div>
-                    <div class="timeblock">1pm</div>
-                    <div class="timeblock">2pm</div>
-                    <div class="timeblock">3pm</div>
-                    <div class="timeblock">4pm</div>
-                    <div class="timeblock">5pm</div>
-                    <div class="timeblock">6pm</div>
-                    <div class="timeblock">7pm</div>
-                    <div class="timeblock">8pm</div>
-                    <div class="timeblock">9pm</div>
-                    <div class="timeblock">10pm</div>
-                    <div class="timeblock">11pm</div>
-                </div>
-                <div class="schedule" data-room="2206">
-                    <div class="timebubble" style="left: 0; width: 10px;"></div>
-                    <div class="timebubble"></div>
-                    <div class="timebubble"></div>
-                    <div class="timebubble"></div>
-                    <div class="timebubble"></div>
-                </div>
-            </div>
-        </div>
+        <div id="scroller"></div>
     </div>
     <style id="dynamic-style"></style>
 </body>
