completed day toggle functionality

--- a/gui/test_table.html
+++ b/gui/test_table.html
@@ -11,13 +11,13 @@
     <div id="map">
     </div>
     <div id="days">
-        <div class="day" data-day="Sun"></div>
-        <div class="day" data-day="Mon"></div>
-        <div class="day" data-day="Tue"></div>
-        <div class="day" data-day="Wed"></div>
-        <div class="day" data-day="Thu"></div>
-        <div class="day" data-day="Fri"></div>
-        <div class="day" data-day="Sat"></div>
+        <div class="day" id="sun"></div>
+        <div class="day" id="mon"></div>
+        <div class="day" id="tue"></div>
+        <div class="day" id="wed"></div>
+        <div class="day" id="thu"></div>
+        <div class="day" id="fri"></div>
+        <div class="day" id="sat"></div>
     </div>
     <div id="legend">
         <div id="scroller"></div>
