added scanline, organized legend.js

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <div class="day" id="sat"></div>
     </div>
     <div id="legend">
+		<div id="scanline"></div>
         <div id="scroller"></div>
     </div>
     <style id="dynamic-style"></style>
