added search gui draft

--- a/sample/test_table.html
+++ b/sample/test_table.html
@@ -8,9 +8,9 @@
     <script type="application/javascript" src="test_table.js"></script>
 </head>
 <body>
-    <div id="map">
-    </div>
+    <div id="map"></div>
     <div id="days">
+        <input type="text" id="search">
         <div class="day" id="sun"></div>
         <div class="day" id="mon"></div>
         <div class="day" id="tue"></div>
