added search feature

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
 	<div id="map"></div>
     <div id="days">
+		<input type="text" id="search">
         <div class="day" id="sun"></div>
         <div class="day" id="mon"></div>
         <div class="day" id="tue"></div>
