added about button

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 </head>
 <body>
 	<div id="map"></div>
+	<a target="_blank" href="https://github.com/Krazete/antscoper#antscoper">
+		<div id="about"></div>
+	</a>
     <div id="days">
 		<input type="text" id="search">
         <div class="day" id="sun"></div>
