made and implemented backup data

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 	<div id="map"></div>
-	<a target="_blank" href="https://github.com/Krazete/antscoper#antscoper">
+	<a target="_blank" href="https://github.com/Krazete/antscoper#readme">
 		<div id="about"></div>
 	</a>
     <div id="days">
