disabled zoom on input

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=0.75">
+	<meta name="viewport" content="width=device-width, initial-scale=0.75, maximum-scale=0.75, user-scalable=no">
 	<title>AntScoper</title>
 	<link rel="stylesheet" type="text/css" href="leaflet/leaflet.css">
 	<script type="application/javascript" src="leaflet/leaflet.js"></script>
