fixed hashsearch, renamed search things

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div id="about"></div>
 	</a>
     <div id="days">
-		<input type="text" id="search">
+		<input type="text" id="query">
         <div class="day" id="sun"></div>
         <div class="day" id="mon"></div>
         <div class="day" id="tue"></div>
