solved the severe quota issue

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="day" id="fri"></div>
         <div class="day" id="sat"></div>
     </div>
-    <div id="legend">
+    <div class="noclass" id="legend">
 		<div id="scanline"></div>
         <div id="scroller"></div>
     </div>
