--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=0.75, maximum-scale=0.75, user-scalable=no">
 	<title>AntScoper</title>
+	<meta name="description" content="A tool for viewing the class schedules of every classroom and lecture hall of any particular building at UCI.">
 	<link rel="stylesheet" type="text/css" href="leaflet/leaflet.css">
 	<script type="application/javascript" src="leaflet/leaflet.js"></script>
 	<link rel="stylesheet" type="text/css" href="index.css">
